--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,23 @@
-#spring.datasource.url=jdbc:mysql://localhost:3306/ads
-spring.datasource.url=jdbc:mysql://45.33.43.141:3306/ads
-spring.datasource.username=wdjdb
-spring.datasource.password=123456
+spring.datasource.url=jdbc:mysql://localhost:3306/ads
+spring.datasource.username=root
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 #spring.jpa.properties.hibernate.hbm2ddl.auto=create-drop
 spring.jpa.properties.hibernate.hbm2ddl.auto=update
+spring.jpa.show-sql=true
 
+
+#spring.datasource.url=jdbc:mysql://45.33.43.141:3306/ads
+#spring.datasource.username=wdjdb
+#spring.datasource.password=123456
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#spring.jpa.properties.hibernate.hbm2ddl.auto=update
 
 spring.output.ansi.enabled=detect
+
+spring.http.multipart.max-file-size=10MB
+
+#ÈÕÖ¾Ä¿Â¼
+logging.path=C:/javaLog
+
+server.port=6666
